--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring/spring_03_beanInstance</module>
         <module>spring/spring_04_beanLifecyle</module>
         <module>spring/spring_05_DISet</module>
+        <module>spring/spring_09_datasource</module>
     </modules>
 
     <properties>
@@ -68,6 +69,24 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <!--Druid-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.16</version>
+        </dependency>
+        <!--c3p0-->
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+        <!--mysql 核心-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
         </dependency>
 
     </dependencies>
