--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>spring/spring_12_annotation_bean_manager</module>
         <module>spring/spring_13_annotation_DI</module>
         <module>spring/spring_14_annotation_third_bean_manager</module>
+        <module>spring/spring_15_springMyBatis</module>
     </modules>
 
     <properties>
@@ -98,6 +99,18 @@
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.9</version>
+        </dependency>
+        <!--MyBatis -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.6</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jboss/jboss-vfs -->
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-vfs</artifactId>
+            <version>3.2.16.Final</version>
         </dependency>
 
     </dependencies>
