--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spring/spring_13_annotation_DI</module>
         <module>spring/spring_14_annotation_third_bean_manager</module>
         <module>spring/spring_15_springMyBatis</module>
+        <module>spring/spring_16_springJunit</module>
     </modules>
 
     <properties>
@@ -111,6 +112,28 @@
             <groupId>org.jboss</groupId>
             <artifactId>jboss-vfs</artifactId>
             <version>3.2.16.Final</version>
+        </dependency>
+
+        <dependency>
+            <!--Spring操作数据库需要该jar包-->
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.10.RELEASE</version>
+        </dependency>
+        <dependency>
+            <!--
+                Spring与Mybatis整合的jar包
+                这个jar包mybatis在前面，是Mybatis提供的
+            -->
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.2.10.RELEASE</version>
         </dependency>
 
     </dependencies>
