--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>spring/spring_14_annotation_third_bean_manager</module>
         <module>spring/spring_15_springMyBatis</module>
         <module>spring/spring_16_springJunit</module>
+        <module>spring/spring_18_Aop_quickstart</module>
     </modules>
 
     <properties>
@@ -134,6 +135,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>5.2.10.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.4</version>
         </dependency>
 
     </dependencies>
