--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>spring/spring_15_springMyBatis</module>
         <module>spring/spring_16_springJunit</module>
         <module>spring/spring_18_Aop_quickstart</module>
+        <module>springMvc/springMvc_01_quickstart</module>
     </modules>
 
     <properties>
@@ -143,5 +144,16 @@
             <version>1.9.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.2.10.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
