--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>spring/spring_16_springJunit</module>
         <module>spring/spring_18_Aop_quickstart</module>
         <module>springMvc/springMvc_01_quickstart</module>
+        <module>springMvc/springMvc_02_bean_load</module>
     </modules>
 
     <properties>
@@ -154,6 +155,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>5.2.10.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.0</version>
         </dependency>
     </dependencies>
 </project>
